--- a/zpi-assistant/src/app/pages/teachers/teachers.component.html
+++ b/zpi-assistant/src/app/pages/teachers/teachers.component.html
@@ -8,6 +8,7 @@
   [inputPlaceholderText]="'Wpisz imię / nazwisko'"
   [addBtnVisible]="addBtnVisible"
   [msgBtnVisible]="msgBtnVisible"
+  idFieldName="id"
   (addBtnClick)="onAddBtnClick($event)"
 >
 </app-typeahead-list>
