--- a/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
+++ b/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
@@ -45,7 +45,7 @@
           <div class="card-body btn-group">
             <ng-container *ngIf="actualDisplayedMsgIsInvitation; else sendMessageBtn">
               <button class="btn btn-danger">Odrzuć zaproszenie</button>
-              <button class="btn btn-success">Akceptuj zaproszenie</button>
+              <button class="btn btn-success" (click)="onAcceptInvitation()">Akceptuj zaproszenie</button>
             </ng-container>
             <ng-template #sendMessageBtn>
               <button class="btn btn-secondary">Wyślij wiadomość</button>
@@ -100,4 +100,10 @@
 
 <ng-template #notFoundEmailsTemplate>
   <div class="alert alert-secondary w-100 border border-secondary text-center my-2 font-weight-bold">Your mailbox is empty</div>
+</ng-template>
+
+<ng-template #successTeamJoinTemplate>
+  <app-modal-response type="success" headerText="Pomyślnie dołączono do zepołu" [textLines]="successTeamJoinTextLines">
+    <button class="btn btn-sm btn-outline-success w-25 mt-3" (click)="modalRef.hide()">OK</button>
+  </app-modal-response>
 </ng-template>
