Change id to email for services, do some code refactor

--- a/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
+++ b/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
@@ -48,7 +48,7 @@
               <button class="btn btn-success" (click)="onAcceptInvitation()">Akceptuj zaproszenie</button>
             </ng-container>
             <ng-template #sendMessageBtn>
-              <button class="btn btn-secondary">Wyślij wiadomość</button>
+              <button class="btn btn-secondary" (click)="showNotImplementedError()">Wyślij wiadomość</button>
             </ng-template>
           </div>
         </div>
