--- a/zpi-assistant/src/app/pages/students/students.component.html
+++ b/zpi-assistant/src/app/pages/students/students.component.html
@@ -10,6 +10,7 @@
   [msgBtnVisible]="msgBtnVisible"
   idFieldName="index"
   (addBtnClick)="onAddBtnClick($event)"
+  (messageBtnClick)="showNotImplementedError()"
 >
 </app-typeahead-list>
 
