--- a/zpi-assistant/src/app/pages/teachers/teachers.component.html
+++ b/zpi-assistant/src/app/pages/teachers/teachers.component.html
@@ -10,6 +10,7 @@
   [msgBtnVisible]="msgBtnVisible"
   idFieldName="id"
   (addBtnClick)="onAddBtnClick($event)"
+  (messageBtnClick)="showNotImplementedError()"
 >
 </app-typeahead-list>
 
