--- a/zpi-assistant/src/app/app.component.html
+++ b/zpi-assistant/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
-<app-custom-alert></app-custom-alert>
+<ng-container *ngFor="let alert of alerts">
+  <app-custom-alert [alert]="alert"></app-custom-alert>
+</ng-container>
 <div class="container"><router-outlet></router-outlet></div>
