Add signin page; minor fixes

--- a/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
+++ b/zpi-assistant/src/app/shared/layouts/navbar/navbar.component.html
@@ -51,7 +51,7 @@
       </div>
       <!-- ----------------------- NOT LOGGED ---------------------- -->
       <ng-template #signInTemplate>
-        <button class="btn btn-outline-success" (click)="logonUser()" routerLink="/teams">Sign in</button>
+        <button class="btn btn-outline-success" routerLink="/signin">Sign in</button>
       </ng-template>
     </div>
   </div>
