Fix users logging and info display

--- a/zpi-assistant/src/app/pages/signin/signin.component.html
+++ b/zpi-assistant/src/app/pages/signin/signin.component.html
@@ -17,6 +17,7 @@
           name="email"
           (focus)="wasVaidated = false"
           [(ngModel)]="email"
+          email
           required
         />
         <div class="invalid-feedback">Provide valid email.</div>
