--- a/zpi-assistant/src/app/pages/teams/teams.component.html
+++ b/zpi-assistant/src/app/pages/teams/teams.component.html
@@ -28,7 +28,7 @@
 </ng-template>
 
 <ng-template #otherErrorTemplate>
-  <app-modal-response type="danger" headerText="Błąd podczas tworzenia zespołu" [textLines]="otherErrorText">
+  <app-modal-response type="danger" headerText="Nie wykonano operacji" [textLines]="[otherErrorText]">
     <button class="btn btn-sm btn-outline-danger w-25 mt-3" (click)="modalRef.hide()">OK</button>
   </app-modal-response>
 </ng-template>
