Fix bug: Invalid teachers and students display when not logged; Small fixes

--- a/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
+++ b/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
@@ -118,7 +118,7 @@
 </ng-template>
 
 <ng-template #otherErrorTemplate>
-  <app-modal-response type="danger" headerText="Błąd podczas dołączania do zespołu" [textLines]="otherErrorText">
+  <app-modal-response type="danger" headerText="Nie przeprowadzono operacji" [textLines]="otherErrorText">
     <button class="btn btn-sm btn-outline-danger w-25 mt-3" (click)="modalRef.hide()">OK</button>
   </app-modal-response>
 </ng-template>
