--- a/zpi-assistant/src/app/pages/students/students.component.html
+++ b/zpi-assistant/src/app/pages/students/students.component.html
@@ -9,7 +9,7 @@
   [addBtnVisible]="addBtnVisible"
   [msgBtnVisible]="msgBtnVisible"
   idFieldName="index"
-  (addBtnClick)="onAddBtnClick($event)"
+  (addBtnClick)="showNotImplementedError()"
   (messageBtnClick)="showNotImplementedError()"
 >
 </app-typeahead-list>
