--- a/zpi-assistant/src/app/pages/teams/teams.component.html
+++ b/zpi-assistant/src/app/pages/teams/teams.component.html
@@ -7,7 +7,9 @@
   <div class="col px-0" *ngIf="actionButtonsVisible">
     <button class="btn btn-dark btn-block my-1" id="create-team-btn" (click)="onCreateTeamClick()">Utwórz zespół</button>
     <button class="btn btn-dark btn-block my-1" id="join-team-btn" (click)="showNotImplementedError()">Dołącz do zespołu</button>
-    <button class="btn btn-success btn-block my-1" id="your-team-btn" routerLink="/teams/your-team">Twój zespół</button>
+    <button *ngIf="isStudentAndHaveTeam" class="btn btn-success btn-block my-1" id="your-team-btn" routerLink="/teams/your-team">
+      Twój zespół
+    </button>
   </div>
 </div>
 
@@ -22,7 +24,7 @@
   <app-modal-response type="danger" headerText="Błąd podczas tworzenia zespołu" [textLines]="teamCreationErrHaveTeamLines">
     <div class="row justify-content-center d-flex">
       <button class="btn btn-sm btn-outline-dark w-25 mt-3" (click)="modalRef.hide()">Nie</button>
-      <button class="btn btn-sm btn-outline-danger w-25 mt-3" (click)="leaveTeam()">Tak</button>
+      <button class="btn btn-sm btn-outline-danger w-25 mt-3" (click)="changeTeam()">Tak</button>
     </div>
   </app-modal-response>
 </ng-template>
