Fix: Don't show add for lecturer when team already has one, avoid duplicating alerts, some minor fixes

--- a/zpi-assistant/src/app/pages/your-team/your-team.component.html
+++ b/zpi-assistant/src/app/pages/your-team/your-team.component.html
@@ -25,7 +25,7 @@
           Edytuj temat
         </button>
         <ng-template #addSubjectBtn>
-          <button *ngIf="teamHasLecturer" class="btn btn-dark btn-block">Dodaj temat</button>
+          <button *ngIf="teamHasLecturer" class="btn btn-dark btn-block" (click)="showNotImplementedError()">Dodaj temat</button>
         </ng-template>
       </div>
     </div>
