--- a/zpi-assistant/src/app/shared/components/custom-alert/custom-alert.component.html
+++ b/zpi-assistant/src/app/shared/components/custom-alert/custom-alert.component.html
@@ -1,4 +1,4 @@
-<div class="text-center font-weight-bold" [ngClass]="{ 'sticky-top': alert.sticky }">
+<div class="text-center font-weight-bold my-0 py-0" [ngClass]="{ 'sticky-top': alert.sticky }">
   <alert
     [type]="alert.type"
     [dismissible]="alert.dismissible"
