UI-backend fixes

--- a/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
+++ b/zpi-assistant/src/app/pages/mailbox/mailbox.component.html
@@ -49,6 +49,7 @@
             </ng-container>
             <ng-template #sendMessageBtn>
               <button class="btn btn-secondary" (click)="showNotImplementedError()">Wyślij wiadomość</button>
+              <button class="btn btn-danger" (click)="deleteMessage()">Usuń wiadomość</button>
             </ng-template>
           </div>
         </div>
@@ -118,7 +119,7 @@
 </ng-template>
 
 <ng-template #otherErrorTemplate>
-  <app-modal-response type="danger" headerText="Nie przeprowadzono operacji" [textLines]="otherErrorText">
+  <app-modal-response type="danger" headerText="Nie przeprowadzono operacji" [textLines]="[otherErrorText]">
     <button class="btn btn-sm btn-outline-danger w-25 mt-3" (click)="modalRef.hide()">OK</button>
   </app-modal-response>
 </ng-template>
